--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -10,16 +10,16 @@ jobs:
       - uses: codelytv/pr-size-labeler@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          xs_label: 'size/xs'
+
           xs_max_size: '10'
-          s_label: 'size/s'
+
           s_max_size: '100'
-          m_label: 'size/m'
+
           m_max_size: '500'
-          l_label: 'size/l'
+
           l_max_size: '1000'
-          xl_label: 'size/xl'
-          fail_if_xl: 'false'
+
+          fail_if_xl: 'true'
           message_if_xl: >
             This PR exceeds the recommended size of 1000 lines.
             Please make sure you are NOT addressing multiple issues with one PR.
