--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -10,3 +10,7 @@ jobs:
       - uses: codelytv/pr-size-labeler@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          xs_max_size: '10'
+          s_max_size: '50'
+          m_max_size: '200'
+          l_max_size: '450'
