--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -10,4 +10,13 @@ jobs:
       - uses: codelytv/pr-size-labeler@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          xs_label: 'size/xs'
+          xs_max_size: '1'
+          s_label: 'size/s'
+          s_max_size: '10'
+          m_label: 'size/m'
+          m_max_size: '20'
+          l_label: 'size/l'
+          l_max_size: '31'
+          xl_label: 'size/xl'
 
