--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -11,12 +11,20 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           xs_label: 'size/xs'
-          xs_max_size: '1'
+          xs_max_size: '50'
           s_label: 'size/s'
-          s_max_size: '10'
+          s_max_size: '200'
           m_label: 'size/m'
-          m_max_size: '20'
+          m_max_size: '350'
           l_label: 'size/l'
-          l_max_size: '31'
+          l_max_size: '500'
           xl_label: 'size/xl'
+          fail_if_xl: 'false'
+          message_if_xl: >
+            This PR exceeds the recommended size of 1000 lines.
+            Please make sure you are NOT addressing multiple issues with one PR.
+            Note this PR might be rejected due to its size.
+          github_api_url: 'api.github.com'
+          files_to_ignore: ''
+
 
