--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,7 +5,7 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-a      - run: echo "🎉🎉🎉🎉🎉🎉🎉🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🎉🎉🎉🎉🎉🎉🎉🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧🐧🐧🐧🐧🐧🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎🔎🔎🔎🔎🔎🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
